<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/ru_white"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity" >
    
    <ImageView 
        android:id="@+id/logoimg_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"/>
    <LinearLayout 
        android:id="@+id/linerlayout1_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoimg_login"
        android:background="@drawable/userpwd"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="95sp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            
            <TextView 
                android:id="@+id/usernamelable_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                
                android:text="@string/username"
                android:textColor="@color/text_login"
                android:textSize="30sp"/>
            <EditText 
                android:id="@+id/username_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                
                android:hint="@string/username_pre"
                android:textSize="30sp"
                android:background="@null"/>
            
        </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="95sp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            
            <TextView 
                android:id="@+id/pwdlable_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                
                android:text="@string/pwd"
                android:textColor="@color/text_login"
                android:textSize="30sp"/>
            <EditText 
                android:id="@+id/pwd_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                
                android:hint="@string/pwd_pre"
                android:textSize="30sp"
                android:background="@null"/>
            
        </LinearLayout>
        
    </LinearLayout>
    <Button 
        android:id="@+id/loginbtn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_btn"
        android:layout_below="@+id/linerlayout1_login"
        />
    <TextView 
        android:id="@+id/callme_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callme"
        android:textColor="@color/text_login"
        android:textSize="15sp"
        android:layout_marginBottom="5sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
